--- a/organizations.html
+++ b/organizations.html
@@ -99,7 +99,9 @@
                     <th>Image</th>
                     <th>Name</th>
                     <th>Links</th>
+                    <th>Organization Type</th>
                     <th>Donation Type</th>
+                    <th>Description</th>
                     <th>Actions</th>
                 </tr>
             </thead>
