--- a/adminpage.html
+++ b/adminpage.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
             
-            <!-- <div class="chart-container">
+            <div class="chart-container">
                 <h2 style="text-align: center;">Disaster Statistics</h2>
                 <div id="chartContainer">
                     <div class="chart-wrapper">
@@ -58,58 +58,48 @@
                         <canvas id="lineChart"></canvas>
                     </div>
                 </div>
-            </div> -->
-
-            <div class="donation-container">
-                <div class="header">
-                    <h2>Recent Activity</h2>
-                    <a href="#">View all</a>
+            </div>
+            <div class="tracker-bg">
+            <div class="donation-tracker">
+                <div class="header-tracker">
+                    <h2>Donation Tracker</h2>
                 </div>
-                <table id="activityTable">
+                <table class="tracker-table">
                     <thead>
                         <tr>
-                            <th>Page</th>
-                            <th>Date & Time</th>
-                            <th>Action</th>
+                            <th>Donation Id</th>
+                            <th>Name</th>
+                            <th>Email</th>
+                            <th>Number</th>
+                            <th>State</th>
+                            <th>Date Pending</th>
+                            <th>Date Approved/Declined</th>
                         </tr>
                     </thead>
-                    <tbody id="activityTableBody">
-                        <!-- Recent activities will be dynamically inserted here -->
+                    <tbody class="tracker-tablebody" id="donationTableBody">
+                        <!-- Rows will be dynamically inserted here -->
                     </tbody>
                 </table>
-            </div>
-
-            <footer class="footer">
-                <div class="footer-content">
-                    <div class="about-us">
-                        <h3>About Us</h3>
-                        <p>We are dedicated to providing timely information and support during disasters. Our mission is to help communities prepare for and respond to emergencies effectively.</p>
-                        <h4>Contact Us</h4>
-                        <div class="contact-links">
-                            <p>
-                                <a href="mailto:info@example.com" class="contact-link">
-                                    <ion-icon name="mail-outline"></ion-icon> info@example.com
-                                </a>
-                            </p>
-                            <p>
-                                <a href="tel:+1234567890" class="contact-link">
-                                    <ion-icon name="call-outline"></ion-icon> +1 234 567 890
-                                </a>
-                            </p>
-                            <p>
-                                <a href="#" class="contact-link">
-                                    <ion-icon name="logo-facebook"></ion-icon> Facebook
-                                </a>
-                            </p>
-                        </div>
+            <div class="recent-container">
+                <div class="donation-container">
+                    <div class="header-recent">
+                        <h2>Recent Activity</h2>
+                        <a href="#">View all</a>
                     </div>
-                    <div class="feedback">
-                        <h3>Feedback</h3>
-                        <p>We value your feedback! Please let us know how we can improve our services.</p>
-                        <a href="feedback.html" class="feedback-link">Give Feedback</a>
-                    </div>
+                    <table id="activityTable">
+                        <thead>
+                            <tr>
+                                <th>Page</th>
+                                <th>Date & Time</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody id="activityTableBody">
+                            <!-- Recent activities will be dynamically inserted here -->
+                        </tbody>
+                    </table>
                 </div>
-            </footer>
+            </div>
     
     <script src="main.js"></script>
 </body>
