--- a/adminpage.html
+++ b/adminpage.html
@@ -80,6 +80,9 @@
                         <!-- Rows will be dynamically inserted here -->
                     </tbody>
                 </table>
+                </div>
+                </div>
+
             <div class="recent-container">
                 <div class="donation-container">
                     <div class="header-recent">
