--- a/user-management.html
+++ b/user-management.html
@@ -12,6 +12,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
+    <div id="toast" data-message="Your message here" data-type="success" style="display: none;"></div>
+    
     <nav class="nav-menu">
         <div class="logo-container">
             <a href="adminpage.html">
@@ -23,10 +25,13 @@
             <a href="adminpage.html" class="nav-link home"><ion-icon name="home-outline"></ion-icon> Home</a>
             <a href="organizations.html" class="nav-link reports"><ion-icon name="business-outline"></ion-icon> Organizations</a>
             <a href="user-management.html" class="nav-link user-management"><ion-icon name="people-outline"></ion-icon> User Management</a>
+            <a href="notification.html" class="nav-link user-management"><ion-icon name="notifications-outline"></ion-icon> Notification</a>
+            <a href="pending.html" class="nav-link user-management"><ion-icon name="hourglass-outline"></ion-icon> Pending</a>
             <a href="settings.html" class="nav-link settings"><ion-icon name="settings-outline"></ion-icon> Settings</a>
             <a href="logout.html" class="nav-link logout"><ion-icon name="log-out-outline"></ion-icon> Log Out</a>
         </div>
     </nav>
+
     
     <div class="user-management-container">
         <div class="user-management-header">
