--- a/adminpage.html
+++ b/adminpage.html
@@ -25,6 +25,8 @@
             <a href="adminpage.html" class="nav-link home"><ion-icon name="home-outline"></ion-icon> Home</a>
             <a href="organizations.html" class="nav-link reports"><ion-icon name="business-outline"></ion-icon> Organizations</a>
             <a href="user-management.html" class="nav-link user-management"><ion-icon name="people-outline"></ion-icon> User Management</a>
+            <a href="notification.html" class="nav-link user-management"><ion-icon name="notifications-outline"></ion-icon> Notification</a>
+            <a href="pending.html" class="nav-link user-management"><ion-icon name="hourglass-outline"></ion-icon> Pending</a>
             <a href="settings.html" class="nav-link settings"><ion-icon name="settings-outline"></ion-icon> Settings</a>
             <a href="logout.html" class="nav-link logout"><ion-icon name="log-out-outline"></ion-icon> Log Out</a>
         </div>
@@ -80,6 +82,9 @@
                         <!-- Rows will be dynamically inserted here -->
                     </tbody>
                 </table>
+
+                </div>
+                </div>
             <div class="recent-container">
                 <div class="donation-container">
                     <div class="header-recent">
